# poop

./: .gitignore  LICENSE  README.md  fizzbuzz.py  nothing_is_something.py  pyproject.toml
.github/workflows/: main.yml
head_first_design_patterns/: README.md
head_first_design_patterns/adapter/ducks/: adapters.py  drones.py  duck_adapter.py  duck_test_drive.py  ducks.py  mallard_duck.py  turkey_adapter.py  turkey_test_drive.py  turkeys.py  wild_turkey.py
head_first_design_patterns/adapter/ducks/challenge/: drone.py  drone_adapter.py  super_drone.py
head_first_design_patterns/adapter/iterenum/: concrete_enumeration.py  enumeration.py  enumeration_iterator.py  enumeration_iterator_test_drive.py  iterator.py  iterator_enumeration.py  iterator_enumeration_test_drive.py  testdrive.py
head_first_design_patterns/chapter1/: duck.py  fly_behavior.py  mini_duck_simulator.py  quack_behavior.py
head_first_design_patterns/chapter2/: display.py  interface.py  weather_data.py  weather_station.py
head_first_design_patterns/command/: diner.py
head_first_design_patterns/command/remotecontrol/: equipament.py  party_remote_control.py  remote_control.py  remote_control_with_undo.py  reversible_command.py  simple_remote.py
head_first_design_patterns/decorator/pizza/: pizza.py  pizza_store.py  topping.py
head_first_design_patterns/decorator/starbuzz/: beverages.py  condiments.py  starbuzz.py
head_first_design_patterns/facade/: home_theater.py
head_first_design_patterns/factory/abstract_factory/: abstract_factory.py  af_pizza.py  af_pizza_store.py  cheese.py  clams.py  main.py  pizza_store.py  sauce.py  veggies.py
head_first_design_patterns/factory/factory_method/: fm_pizza.py  fm_pizza_store.py  main.py  pizza_store.py
head_first_design_patterns/factory/simple_factory/: main.py  pizza.py  pizza_factory.py  pizza_store.py  sf_pizza_factory.py
head_first_design_patterns/observer/: display.py  weather_data.py  weather_station.py
head_first_design_patterns/singleton/: asynchronous.py  chocolate.py  classic.py  subclass.py  thread_safe.py
head_first_design_patterns/strategy/: duck.py  fly_behavior.py  mini_duck_simulator.py  quack_behavior.py
poop/: die.py  die_handle.py  fizzbuzz.py  test_die.py  test_die_handle.py
poop/hfdp/: README.md
poop/hfdp/adapter/: README.md
poop/hfdp/adapter/ducks/: duck.py  duck_adapter.py  duck_test_drive.py  turkey.py  turkey_adapter.py  turkey_test_drive.py
poop/hfdp/adapter/iterenum/: enumeration.py  enumeration_iterator.py  enumeration_iterator_test_drive.py  iterator_enumeration.py  iterator_enumeration_test_drive.py
poop/hfdp/command/: README.md  tkinter_example.py
poop/hfdp/command/diner/: burger_and_fries_order.py  cook.py  customer.py  diner.py  order.py  waitress.py
poop/hfdp/command/diner_lambda/: customer.py  diner.py  order.py  waitress.py
poop/hfdp/command/party/: ceiling_fan_high_command.py  ceiling_fan_low_command.py  ceiling_fan_medium_command.py  ceiling_fan_off_command.py  command.py  hottub.py  hottub_off_command.py  hottub_on_command.py  light.py  light_off_command.py  light_on_command.py  living_room_light_off_command.py  living_room_light_on_command.py  macro_command.py  remote_control.py  remote_loader.py  stereo_off_command.py  stereo_on_command.py  stereo_on_with_cd_command.py  tv_off_command.py  tv_on_command.py
poop/hfdp/command/remote/: ceiling_fan_off_command.py  ceiling_fan_on_command.py  command.py  garage_door.py  garage_door_down_command.py  garage_door_up_command.py  hottub_off_command.py  hottub_on_command.py  light.py  light_off_command.py  light_on_command.py  living_room_light_off_command.py  living_room_light_on_command.py  nocommand.py  remote_control.py  remote_loader.py  stereo.py  stereo_off_command.py  (+1 more)
poop/hfdp/decorator/: README.md
poop/hfdp/facade/: README.md  home_theater_facade.py  home_theater_testdrive.py
poop/hfdp/factory/: README.md
poop/hfdp/observer/: README.md  display.py  util.py
poop/hfdp/singleton/: asynchronous.py  chocolate.py  subclass.py  thread_safe.py
poop/hfdp/strategy/: duck.py  fly_behavior.py  mini_duck_simulator.py  quack_behavior.py
(+171 files in other folders)
