[tool.poetry]
name = "poop"
version = "0.1.0"
description = "Python Object-Oriented Programming"
authors = ["cassiobotaro <cassiobotaro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
forbiddenfruit = "^0.1.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79


[tool.mypy]
warn_return_any = true
warn_unused_configs = true
exclude = '(fizzbuzz\.py|nothing_is_something\.py)$'