[tool.poetry]
name = "poop"
version = "0.1.0"
description = "Python Object-Oriented Programming"
authors = ["cassiobotaro <cassiobotaro@gmail.com>"]
license = "MIT"
keywords = ["oop", "object-oriented", "programming"]

[tool.poetry.dependencies]
python = "^3.10"
forbiddenfruit = "^0.1.3"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
mypy = "^0.910"
flake8 = "^3.9.2"
black = "^21.10b0"

[tool.poetry.scripts]
duck_test_drive = "poop.hfdp.adapter.ducks.duck_test_drive:main"
turkey_test_drive = "poop.hfdp.adapter.ducks.turkey_test_drive:main"
enumeration_iterator_test_drive = "poop.hfdp.adapter.iterenum.enumeration_iterator_test_drive:main"
iterator_enumeration_test_drive = "poop.hfdp.adapter.iterenum.iterator_enumeration_test_drive:main"
diner = "poop.hfdp.command.diner.diner:main"
diner_lambda = "poop.hfdp.command.diner_lambda.diner:main"
party = "poop.hfdp.command.party.remote_loader:main"
remote = "poop.hfdp.command.remote.remote_loader:main"
remote_wl = "poop.hfdp.command.remote_wl.remote_loader:main"
simpleremote = "poop.hfdp.command.simpleremote.remote_control_test:main"
simpleremote_wl = "poop.hfdp.command.simpleremote_wl.remote_control_test:main"
tkinter = "poop.hfdp.command.tkinter.tkinter_example:main"
undo = "poop.hfdp.command.undo.remote_loader:main"
input_test = "poop.hfdp.decorator.io.input_test:main"
pizza_store = "poop.hfdp.decorator.pizza.pizza_store:main"
starbuzz_coffee = "poop.hfdp.decorator.starbuzz.starbuzz_coffee:main"
starbuzz_coffee_with_sizes = "poop.hfdp.decorator.starbuzz_with_sizes.starbuzz_coffee:main"
home_theater = "poop.hfdp.facade.home_theater.home_theater_test_drive:main"
pizza_test_drive = "poop.hfdp.factory.pizzas.pizza_test_drive:main"
calendar_test_drive = "poop.hfdp.factory.challenge.calendar_test_drive:main"
pizza_af = "poop.hfdp.factory.pizzaaf.pizza_test_drive:main"
pizza_fm = "poop.hfdp.factory.pizzafm.pizza_test_drive:main"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
exclude = '(fizzbuzz\.py|nothing_is_something\.py)$'